--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
 	"license": "Apache-2.0",
 	"devDependencies": {
 		"cordova-android": "^9.1.0",
+		"cordova-plugin-battery-status": "^2.0.3",
 		"cordova-plugin-device": "^2.0.3",
 		"cordova-plugin-whitelist": "^1.3.5"
 	},
 	"cordova": {
 		"plugins": {
 			"cordova-plugin-whitelist": {},
-			"cordova-plugin-device": {}
+			"cordova-plugin-device": {},
+			"cordova-plugin-battery-status": {}
 		},
 		"platforms": [
 			"android"
