added plugin cordova-plugin-battery-status

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"description": "A sample Apache Cordova application that responds to the deviceready event.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"android": "cordova run android"
 	},
 	"keywords": [
 		"ecosystem:cordova"
@@ -16,13 +17,15 @@
 		"cordova-android": "^9.1.0",
 		"cordova-plugin-battery-status": "^2.0.3",
 		"cordova-plugin-device": "^2.0.3",
+		"cordova-plugin-dialogs": "^2.0.2",
 		"cordova-plugin-whitelist": "^1.3.5"
 	},
 	"cordova": {
 		"plugins": {
 			"cordova-plugin-whitelist": {},
 			"cordova-plugin-device": {},
-			"cordova-plugin-battery-status": {}
+			"cordova-plugin-battery-status": {},
+			"cordova-plugin-dialogs": {}
 		},
 		"platforms": [
 			"android"
