--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"cordova-plugin-battery-status": "^2.0.3",
 		"cordova-plugin-device": "^2.0.3",
 		"cordova-plugin-dialogs": "^2.0.2",
+		"cordova-plugin-network-information": "^3.0.0",
 		"cordova-plugin-whitelist": "^1.3.5"
 	},
 	"cordova": {
@@ -25,7 +26,8 @@
 			"cordova-plugin-whitelist": {},
 			"cordova-plugin-device": {},
 			"cordova-plugin-battery-status": {},
-			"cordova-plugin-dialogs": {}
+			"cordova-plugin-dialogs": {},
+			"cordova-plugin-network-information": {}
 		},
 		"platforms": [
 			"android"
