--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"cordova-plugin-device": "^2.0.3",
 		"cordova-plugin-dialogs": "^2.0.2",
 		"cordova-plugin-network-information": "^3.0.0",
-		"cordova-plugin-whitelist": "^1.3.5"
+		"cordova-plugin-screen-orientation": "^3.0.2",
+		"cordova-plugin-whitelist": "^1.3.5",
+		"es6-promise-plugin": "^4.2.2"
 	},
 	"cordova": {
 		"plugins": {
@@ -27,7 +29,8 @@
 			"cordova-plugin-device": {},
 			"cordova-plugin-battery-status": {},
 			"cordova-plugin-dialogs": {},
-			"cordova-plugin-network-information": {}
+			"cordova-plugin-network-information": {},
+			"cordova-plugin-screen-orientation": {}
 		},
 		"platforms": [
 			"android"
