--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"cordova-plugin-dialogs": "^2.0.2",
 		"cordova-plugin-network-information": "^3.0.0",
 		"cordova-plugin-screen-orientation": "^3.0.2",
+		"cordova-plugin-vibration": "^3.1.1",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"es6-promise-plugin": "^4.2.2"
 	},
@@ -30,7 +31,8 @@
 			"cordova-plugin-battery-status": {},
 			"cordova-plugin-dialogs": {},
 			"cordova-plugin-network-information": {},
-			"cordova-plugin-screen-orientation": {}
+			"cordova-plugin-screen-orientation": {},
+			"cordova-plugin-vibration": {}
 		},
 		"platforms": [
 			"android"
